--- a/example/resources/archives-index.yaml
+++ b/example/resources/archives-index.yaml
@@ -1,3 +1,4 @@
 asset_index:
   ondisk:
     test-local-ref: "local/compare-vcs-local-ref-archive.zip"
+    init-repo-store:test-local-ref: "init-repo-store/compare-vcs-local-ref-archive.zip"
