--- a/example/resources/render-index.yaml
+++ b/example/resources/render-index.yaml
@@ -5,6 +5,7 @@ asset_index:
     instruct: "操作指引"
     verifyInputPlaceholder: "請輸入答案"
     verifyInputSubmitText: "確認"
+    verifyInputFailed: "答案不正確"
     verifyRepoDescription: "檢查 git 倉庫是否正確..."
     loadReference: "載入 git 倉庫"
     checkpointSaving: "保存檢查點中..."
