--- a/example/resources/course/main.yaml
+++ b/example/resources/course/main.yaml
@@ -10,10 +10,10 @@
           id: "example-main-level-1-1"
           nameKey: "levels/main.level-1-1.name"
           configAssetId: "levels/local"
-    #     - !level
-    #       id: "example-main-level-1-2"
-    #       nameKey: "levels/main.level-1-2.name"
-    #       configAssetId: "levels/remote"
+        - !level
+          id: "example-main-level-1-2"
+          nameKey: "levels/main.level-1-2.name"
+          configAssetId: "levels/remote"
     # - !sequential-section
     #   id: "example-main-seciont-2"
     #   nameKey: "levels/main.section-2.name"
