--- a/test/resources/vcs-compare/generate-testing-ref-repo.yaml
+++ b/test/resources/vcs-compare/generate-testing-ref-repo.yaml
@@ -15,7 +15,7 @@ stages:
       - local  
     reset: true
     actions:
-    - !writeFile
+    - !act.writeFile
       sourceAssetIds:
         - file/dirtyAdd
       destinationPaths:
@@ -25,7 +25,7 @@ stages:
       - local  
     reset: true
     actions:
-    - !removeFile
+    - !act.removeFile
       targetPaths:
         - repo/first_file
   - name: dirtyModify
@@ -33,7 +33,7 @@ stages:
       - local  
     reset: true
     actions:
-    - !writeFile
+    - !act.writeFile
       sourceAssetIds:
         - file/dirtyModify
       destinationPaths:
@@ -54,7 +54,7 @@ stages:
     replay:
     - dirtyAdd    
     actions:
-    - !stageAll
+    - !act.stageAll
       repoSetupName: local
   - name: dirtyRemoveStage
     save:
@@ -63,7 +63,7 @@ stages:
     replay:
     - dirtyRemove    
     actions:
-    - !stageAll
+    - !act.stageAll
       repoSetupName: local      
   - name: dirtyModifyStage
     save:
@@ -72,7 +72,7 @@ stages:
     replay:
     - dirtyModify    
     actions:
-    - !stageAll
+    - !act.stageAll
       repoSetupName: local
   - name: dirtyMixedStage
     save:
@@ -83,14 +83,14 @@ stages:
     - dirtyRemove
     - dirtyModify    
     actions:
-    - !stageAll
+    - !act.stageAll
       repoSetupName: local      
   - name: merge
     save:
       - local  
     reset: true
     actions:
-    - !merge
+    - !act.merge
       repoSetupName: local
       withBranch: "second-branch"
   - name: conflictAA
@@ -98,7 +98,7 @@ stages:
       - local  
     reset: true
     actions:
-    - !merge
+    - !act.merge
       repoSetupName: local
       withBranch: "conflict-AA"
   - name: conflictMM
@@ -106,7 +106,7 @@ stages:
       - local  
     reset: true
     actions:
-    - !merge
+    - !act.merge
       repoSetupName: local
       withBranch: "conflict-MM"
   - name: conflictMR
@@ -114,7 +114,7 @@ stages:
       - local  
     reset: true
     actions:
-    - !merge
+    - !act.merge
       repoSetupName: local
       withBranch: "conflict-MR"
   - name: conflictMixed
@@ -122,7 +122,7 @@ stages:
       - local  
     reset: true  
     actions:
-    - !merge
+    - !act.merge
       repoSetupName: local
       withBranch: "conflict-mixed"
   - name: conflictEdit
@@ -132,7 +132,7 @@ stages:
     replay:
     - conflictMixed    
     actions:
-    - !writeFile
+    - !act.writeFile
       sourceAssetIds:
         - file/resolveConflictAA
         - file/resolveConflictMM
@@ -149,7 +149,7 @@ stages:
     - conflictMixed
     - conflictEdit    
     actions:
-    - !stageAll
+    - !act.stageAll
       repoSetupName: local
   - name: conflictResolve
     save:
@@ -160,14 +160,14 @@ stages:
     - conflictEdit
     - conflictResolveStage    
     actions:
-    - !continueMerge
+    - !act.continueMerge
       repoSetupName: local
   - name: detached
     save:
       - local  
     reset: true
     actions:
-    - !cleanCheckout
+    - !act.cleanCheckout
       repoSetupName: local
       commitish: "end-of-base"
       
