Add schema for loadReferenceAction

--- a/example/resources/archives-index.yaml
+++ b/example/resources/archives-index.yaml
@@ -1,5 +1,7 @@
 asset_index:
   ondisk:
     test-local-ref: "local/test-local-ref.zip"
+    another: "local/another.zip"
+    test-remote-ref: "local/test-remote-ref.zip"
     init-repo-store:test-local-ref: "init-repo-store/compare-vcs-local-ref-archive.zip"
     init-repo-store:test-remote-ref: "init-repo-store/compare-vcs-remote-ref-archive.zip"
