--- a/test/resources/vcs-compare/generate-testing-ref-repo.yaml
+++ b/test/resources/vcs-compare/generate-testing-ref-repo.yaml
@@ -90,7 +90,7 @@ stages:
       - local  
     reset: true
     actions:
-    - !act.merge
+    - !dev.act.merge
       repoSetupName: local
       withBranch: "second-branch"
   - name: conflictAA
@@ -98,7 +98,7 @@ stages:
       - local  
     reset: true
     actions:
-    - !act.merge
+    - !dev.act.merge
       repoSetupName: local
       withBranch: "conflict-AA"
   - name: conflictMM
@@ -106,7 +106,7 @@ stages:
       - local  
     reset: true
     actions:
-    - !act.merge
+    - !dev.act.merge
       repoSetupName: local
       withBranch: "conflict-MM"
   - name: conflictMR
@@ -114,7 +114,7 @@ stages:
       - local  
     reset: true
     actions:
-    - !act.merge
+    - !dev.act.merge
       repoSetupName: local
       withBranch: "conflict-MR"
   - name: conflictMixed
@@ -122,7 +122,7 @@ stages:
       - local  
     reset: true  
     actions:
-    - !act.merge
+    - !dev.act.merge
       repoSetupName: local
       withBranch: "conflict-mixed"
   - name: conflictEdit
@@ -160,14 +160,14 @@ stages:
     - conflictEdit
     - conflictResolveStage    
     actions:
-    - !act.continueMerge
+    - !dev.act.continueMerge
       repoSetupName: local
   - name: detached
     save:
       - local  
     reset: true
     actions:
-    - !act.cleanCheckout
+    - !dev.act.cleanCheckout
       repoSetupName: local
       commitish: "end-of-base"
       
